--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,14 @@ url: "https://andy112.github.io"
 # Theme
 theme: minima
 
+author:
+  name: "Ikenna Igboasoiyi"
+  title: "Software Engineer"
+
 # Social links
-github_username: ikenna-i
-linkedin_username: your-linkedin-username
-email: your-email@example.com
+github_username: https://github.com/Andy112
+linkedin_username: www.linkedin.com/in/ikenna-igboasoiyi
+email: ikennaigboasoiyi@yahoo.com
 
 # Build settings
 markdown: kramdown
