--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ theme: minima
 
 author:
   name: "Ikenna Igboasoiyi"
-  title: "Software Engineer"
+  title: "Senior Mobile Engineer"
 
 # Social links
 github_username: https://github.com/Andy112
